; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/hwmgr/extr_vega10_hwmgr.c_vega10_update_sclk_threshold.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/hwmgr/extr_vega10_hwmgr.c_vega10_update_sclk_threshold.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pp_hwmgr = type { %struct.vega10_hwmgr* }
%struct.vega10_hwmgr = type { i64, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@PHM_PlatformCaps_SclkThrottleLowNotification = common dso_local global i32 0, align 4
@PPSMC_MSG_SetLowGfxclkInterruptThreshold = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pp_hwmgr*)* @vega10_update_sclk_threshold to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vega10_update_sclk_threshold(%struct.pp_hwmgr* %0) #0 {
  %2 = alloca %struct.pp_hwmgr*, align 8
  %3 = alloca %struct.vega10_hwmgr*, align 8
  %4 = alloca i64, align 8
  store %struct.pp_hwmgr* %0, %struct.pp_hwmgr** %2, align 8
  %5 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %2, align 8
  %6 = getelementptr inbounds %struct.pp_hwmgr, %struct.pp_hwmgr* %5, i32 0, i32 0
  %7 = load %struct.vega10_hwmgr*, %struct.vega10_hwmgr** %6, align 8
  store %struct.vega10_hwmgr* %7, %struct.vega10_hwmgr** %3, align 8
  store i64 0, i64* %4, align 8
  %8 = load i32, i32* @PHM_PlatformCaps_SclkThrottleLowNotification, align 4
  %9 = call i64 @PP_CAP(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %30

11:                                               ; preds = %1
  %12 = load %struct.vega10_hwmgr*, %struct.vega10_hwmgr** %3, align 8
  %13 = getelementptr inbounds %struct.vega10_hwmgr, %struct.vega10_hwmgr* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %30

16:                                               ; preds = %11
  %17 = load %struct.vega10_hwmgr*, %struct.vega10_hwmgr** %3, align 8
  %18 = getelementptr inbounds %struct.vega10_hwmgr, %struct.vega10_hwmgr* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  store i64 %19, i64* %4, align 8
  %20 = load i64, i64* %4, align 8
  %21 = call i32 @cpu_to_le32(i64 %20)
  %22 = load %struct.vega10_hwmgr*, %struct.vega10_hwmgr** %3, align 8
  %23 = getelementptr inbounds %struct.vega10_hwmgr, %struct.vega10_hwmgr* %22, i32 0, i32 1
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  store i32 %21, i32* %25, align 8
  %26 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %2, align 8
  %27 = load i32, i32* @PPSMC_MSG_SetLowGfxclkInterruptThreshold, align 4
  %28 = load i64, i64* %4, align 8
  %29 = call i32 @smum_send_msg_to_smc_with_parameter(%struct.pp_hwmgr* %26, i32 %27, i64 %28)
  br label %30

30:                                               ; preds = %16, %11, %1
  ret i32 0
}

declare dso_local i64 @PP_CAP(i32) #1

declare dso_local i32 @cpu_to_le32(i64) #1

declare dso_local i32 @smum_send_msg_to_smc_with_parameter(%struct.pp_hwmgr*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
